fixed height and width of profile splash page and alignment of buttons

--- a/main/static/css/main/yb_core.css
+++ b/main/static/css/main/yb_core.css
@@ -520,10 +520,6 @@ p {
         Splash Pages - Profile
 */
 
-.yb-splash.profile {
-    backdrop-filter: blur(20px) brightness(50%);
-    -webkit-backdrop-filter: blur(20px) brightness(50%);
-}
 /*
         Splash Pages - Label
 */
