--- a/yb_profile/static/css/yb_profile/yb_profile.css
+++ b/yb_profile/static/css/yb_profile/yb_profile.css
@@ -179,6 +179,8 @@ Profile Page
 .splash-page.profile {
     backdrop-filter: blur(20px) brightness(50%);
     -webkit-backdrop-filter: blur(20px) brightness(50%);
+    position: fixed;
+    z-index: 50;
     height: 100vh;
     width: 100vw;
     top: 0px;
